scenario-04-resiliency-patterns/manifests/continuous-traffic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: continuous-traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: continuous-traffic
  template:
    metadata:
      labels:
        app: continuous-traffic
    spec:
      containers:
        - name: traffic
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            - |
              while true; do
                wget -q -O - --timeout=2 http://frontend || true
                sleep 0.5
              done
