scenario-04-resiliency-patterns/manifests/failing-instance-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-failing
  labels:
    app: inventory
    version: failing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
      version: failing
  template:
    metadata:
      labels:
        app: inventory
        version: failing
    spec:
      containers:
        - name: inventory
          image: ghcr.io/nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
