scenario-04-resiliency-patterns/manifests/inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
    service: inventory
spec:
  ports:
    - port: 80
      targetPort: 9090
      name: http
  selector:
    app: inventory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
      version: v1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
        - name: inventory
          image: ghcr.io/nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
