scenario-04-resiliency-patterns/manifests/outlier-detection.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: inventory-outlier
spec:
  host: inventory
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
