scenario-04-resiliency-patterns/manifests/retry-config.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pricing-with-retry
spec:
  hosts:
    - pricing
  http:
    - route:
        - destination:
            host: pricing
      timeout: 2.5s
      retries:
        attempts: 3
        perTryTimeout: 0.5s
        retryOn: gateway-error,connect-failure,refused-stream,unavailable,5xx
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: inventory-with-retry
spec:
  hosts:
    - inventory
  http:
    - route:
        - destination:
            host: inventory
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 0.5s
        retryOn: gateway-error,connect-failure,refused-stream,unavailable,5xx
